--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -93,7 +93,7 @@ $screen-xl: 1280px;
 $screen-2xl: 1536px;
 
 // Container
-$container-max-width: 1400px;
+$container-max-width: 1200px;
 $container-padding: $space-md;
 
 // Z-index Scale
